List.of на Arrays.asList